更新项目配置和依赖，优化代码逻辑

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,8 @@ env:
   FORCE_COLOR: true
 
 on:
-  push:
-    branches: [master]
+#  push:
+#    branches: [master]
   pull_request:
     branches: [master]
 
