--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-rename",
-  "version": "3.2.16",
-  "description": "Rename react-native app with just one command",
+  "name": "taro-rn-shell-rename",
+  "version": "3.2.17",
+  "description": "Rename taro-rn-shell-rename with just one command",
   "main": "lib/index.js",
   "scripts": {
     "test": "jest",
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/junedomingo/react-native-rename.git"
+    "url": "git+https://github.com/likedos/taro-rn-shell-rename.git"
   },
   "keywords": [
     "react-native",
@@ -45,9 +45,9 @@
     "react-native-rename": "lib/index.js"
   },
   "bugs": {
-    "url": "https://github.com/junedomingo/react-native-rename/issues"
+    "url": "https://github.com/likedos/taro-rn-shell-rename/issues"
   },
-  "homepage": "https://github.com/junedomingo/react-native-rename#readme",
+  "homepage": "https://github.com/likedos/taro-rn-shell-rename#readme",
   "devDependencies": {
     "esbuild": "^0.19.2",
     "eslint": "^8.47.0",
