更新.gitignore、.npmignore、.npmrc和package.json，优化项目配置和依赖管理

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "license": "MIT",
   "bin": {
-    "react-native-rename": "lib/index.js"
+    "taro-rn-shell-rename": "lib/index.js"
   },
   "bugs": {
     "url": "https://github.com/likedos/taro-rn-shell-rename/issues"
